@@ -1,6 +1,9 @@
 acl-1.1.0 (16 Jul 2001)
 	- reworked Makefiles to use libtool
 	- rework some of the Debian packaging rules
+	- libacl now installed into /lib instead of /usr/lib
+	- chacl now installed into /bin instead of /usr/bin,
+	  for consistency with chmod, chgrp, and chown
 
 acl-1.0.8 (02 Jul 2001)
 	- Work around syscall number collision on recent ia64 kernels
